# Spotify-Music-Downloader

./: LICENSE  README.md  cli.py  downloader.py  downloader_music_video.py  downloader_song.py  main  pyproject.toml  setup.py
.github/workflows/: publish.yml
